[package]
name = "uring"
version = "0.1.0"
authors = ["Tremor Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["ws-proto", "uring-common", "mring-node"]

[dependencies]

ws-proto = {path = "ws-proto"}
uring-common = {path = "uring-common"}

actix = "0.8"
actix-web = "1"
actix-web-actors = "1"
awc = "0.2"
actix-codec = "0.1"

raft = "0.6.0-alpha"
rocksdb = "0.12"
#slog = "2"
slog = { version = "2", features = ["max_level_info", "release_max_level_warn"] }
slog-json = "2"

slog-term = "*"
slog-async = "*"

crossbeam-channel = "0.4"

byteorder = "1.3"
base64 = "0.11"
bytes = "0.4"
clap = "2"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
protobuf = "2"


[patch.crates-io]
raft = { git = 'https://github.com/tikv/raft-rs' }

[features]
default = ["json-proto"]
json-proto = []
