[package]
name = "uring"
version = "0.1.0"
authors = ["The Tremor Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["ws-proto", "uring-common", "mring-node", "gdrl", "protocol-driver"]

[dependencies]

ws-proto = {path = "ws-proto"}
uring-common = {path = "uring-common"}
gdrl = {path = "gdrl"}
protocol-driver = {path = "protocol-driver"}

raft = "0.6.0-alpha"
rocksdb = "0.14"
#slog = "2"
slog = { version = "2", features = ["max_level_info", "release_max_level_warn"] }
slog-json = "2"

slog-term = "*"
slog-async = "*"

crossbeam-channel = "0.4"

byteorder = "1.3"
base64 = "0.12"
bytes = "0.5"
clap = "2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
protobuf = "2"

url = "*"

async-tungstenite = { version = "0.14", features = ["async-std-runtime"] }
async-std = {version="*", features = ["unstable"]}
async-tls = "*"
futures = "0.3"
async-trait = "0.1"

http-service-hyper = "0.4.1"
tide = "0.13"
http = "0.2"

[dependencies.tungstenite]
version = "0.11"
default-features = false

[patch.crates-io]
raft = { git = 'https://github.com/tikv/raft-rs' }
#hyper = { git = 'https://github.com/hyperium/hyper' }
#tide = { git = 'https://github.com/http-rs/tide' }

[features]
default = ["json-proto"]
json-proto = []
