[package]
name = "uring2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openraft = { git = "https://github.com/datafuselabs/openraft.git", branch = "main" }
async-std = { version = "1.11.0", features = [
  "unstable",
  "tokio1",
  "attributes",
] }
async-trait = "0.1"
serde = "1.0.137"
anyhow = "1.0.57"
thiserror = "1.0.31"
tracing = "0.1.34"
tracing-subscriber = "*"
serde_json = "1.0.81"
toy-rpc = { version = "*", features = [
  "async_std_runtime",
  "ws_async_std",
  "server",
  "client",
] }
clap = "*"
dashmap = "*"
