[package]
name = "mring-node"
version = "0.1.0"
authors = ["Heinz Gies <hgies@wayfair.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ws-proto = { path = "../ws-proto" }
gdrl = { path = "../gdrl" }
uring-common = { path = "../uring-common" }
slog = { version = "2", features = ["max_level_info", "release_max_level_warn"] }

async-tungstenite = { version = "0.14", features = ["async-std-runtime"] }
async-std = {version="*", features = ["unstable"]}
async-tls = "*"
futures = "0.3"
url = "*"

slog-term = "*"
slog-async = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"


[dependencies.tungstenite]
version = "0.11"
default-features = false
