[package]
name = "protocol-driver"
version = "0.1.0"
authors = ["The Tremor Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="*", features = ["unstable"]}
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
uring-common = { path = "../uring-common" }
ws-proto = { path = "../ws-proto" }
async-trait = "0.1"
serde_json = "1.0"
