[package]
name = "ws-proto"
version = "0.1.0"
authors = ["Heinz Gies <hgies@wayfair.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uring-common = { path = "../uring-common" }
serde="1"
serde_json="1"
serde_derive="1"
